--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -10,6 +10,6 @@
     <hr />
     <p>Esto es una prueba</p>
 
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/objeto-literal.js"></script>
   </body>
 </html>
